# Snek

Snek/: CMakeLists.txt  Snek.kdev4  main.cpp
Snek/.kdev4/: Snek.kdev4
Snek/include/: assetmanager.h  context.h  game.h  gameover.h  gameplay.h  mainmenu.h  pause.h  snake.h  state.h  statemanager.h
Snek/src/: assetmanager.cpp  game.cpp  gameover.cpp  gameplay.cpp  main.cpp  mainmenu.cpp  pause.cpp  snake.cpp  state.cpp  statemanager.cpp
